# orbital-stack

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.es.md  README.md  coverage.xml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  debug-dvc.yml  weekly-scrape.yml
configs/: canonical_schema.v1.yaml  pipeline.yaml
data/raw/: unoosa.dvc
docs/: PLAN_v1.1.md
docs/adrs/: 001-monorepo-two-tracks.md  002-minimal-stack.md  003-dvc-storage-prefect-orchestration.md  004-taxosat-future-constraints.md  005-language-policy.md  006-release-strategy.md  007-diffable-columns.md  008-canonical-schema-evolution.md  009-canonical-schema-shape.md  010-v0.5.0-scope.md  011-celestrak-two-endpoint-split.md  012-orbit-regime-rule-adjustments.md
pipelines/flows/: ingest_flow.py
scripts/: bootstrap.sh
src/orbital/ingest/: unoosa.py
src/orbital/ingest/celestrak/: __init__.py  _http.py  gp.py  satcat.py
src/orbital/quality/: canonical_schemas.py  celestrak_gp_schemas.py  celestrak_satcat_schemas.py  expectations.py  schemas.py
src/orbital/transform/: diff.py  normalize.py
src/orbital/utils/: __init__.py  io.py  paths.py
tests/contract/: test_canonical_schema_evolution.py  test_celestrak_satcat_real.py
tests/fixtures/: canonical_schema_v1_manifest.yaml  name_normalization.yaml
tests/unit/: test_canonical_schemas.py  test_celestrak_gp.py  test_celestrak_gp_schemas.py  test_celestrak_http.py  test_celestrak_satcat.py  test_celestrak_satcat_schemas.py  test_diff.py  test_expectations.py  test_io_smoke.py  test_normalize.py  test_paths.py  test_schemas.py  test_unoosa.py
tmp/: e2e_smoke.py
