[project]
name = "orbital-stack"
version = "0.0.1"
description = "Data product on the UNOOSA space object registry."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "orbital-stack contributors" }]
keywords = ["space", "unoosa", "satellites", "data-engineering", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "polars>=1.9,<2.0",
    "duckdb>=1.1",
    "requests>=2.32",
    "tqdm>=4.66",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pandera[polars]>=0.20",
    "structlog>=24.4",
    "prefect>=3.1,<4.0",
    "skyfield>=1.49",
    "rapidfuzz>=3.10",
    "spacetrack>=1.3",
    "pyprojroot>=0.3",
    "pyyaml>=6.0.2",
    "dvc[s3]>=3.55",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Repository = "https://github.com/<owner>/orbital-stack"
Documentation = "https://<owner>.github.io/orbital-stack/"
Changelog = "https://github.com/<owner>/orbital-stack/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8.4",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "ipykernel>=6.29",
    "responses>=0.25",
    "types-requests>=2.32",
    "types-PyYAML>=6.0",
    "types-tqdm>=4.66",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbital"]

# --------------------------------------------------------------------------- #
# uv
# --------------------------------------------------------------------------- #
[tool.uv]
default-groups = ["dev"]

# --------------------------------------------------------------------------- #
# ruff — professional rule set, no preview
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "pipelines"]
extend-exclude = ["notebooks/99_scratch", "data", "dashboards"]

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "ASYNC",        # flake8-async
    "S",            # flake8-bandit
    "BLE",          # flake8-blind-except
    "B",            # flake8-bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "DTZ",          # flake8-datetimez
    "T10",          # flake8-debugger
    "EM",           # flake8-errmsg
    "FA",           # flake8-future-annotations
    "ISC",          # flake8-implicit-str-concat
    "ICN",          # flake8-import-conventions
    "LOG",          # flake8-logging
    "G",            # flake8-logging-format
    "INP",          # flake8-no-pep420
    "PIE",          # flake8-pie
    "T20",          # flake8-print
    "PYI",          # flake8-pyi
    "PT",           # flake8-pytest-style
    "Q",            # flake8-quotes
    "RSE",          # flake8-raise
    "RET",          # flake8-return
    "SLF",          # flake8-self
    "SIM",          # flake8-simplify
    "TID",          # flake8-tidy-imports
    "ARG",          # flake8-unused-arguments
    "PTH",          # flake8-use-pathlib
    "ERA",          # eradicate (commented-out code)
    "PD",           # pandas-vet
    "PGH",          # pygrep-hooks
    "PL",           # pylint
    "TRY",          # tryceratops
    "FLY",          # flynt
    "NPY",          # numpy
    "RUF",          # ruff-specific
]
ignore = [
    "COM812",  # handled by ruff-format
    "ISC001",  # handled by ruff-format
    "S101",    # assert is intentional (Power of 10, Rule 5)
    "PLR0913", # too many arguments — we use keyword args by policy
    "EM101",   # string literal in exception — verbosity not worth it
    "EM102",   # f-string in exception — verbosity not worth it
    "TRY003",  # long messages outside exception class — verbosity not worth it
]
unfixable = ["ERA001"]  # don't auto-delete commented code; flag it

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"      = ["S", "PLR2004", "SLF001", "INP001"]
"pipelines/**/*.py"  = ["INP001"]
"scripts/**/*.py"    = ["INP001", "T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["orbital"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 40

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 90

# --------------------------------------------------------------------------- #
# mypy — strict
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true
files = ["src/orbital"]

[[tool.mypy.overrides]]
module = [
    "duckdb",
    "duckdb.*",
    "skyfield",
    "skyfield.*",
    "spacetrack",
    "spacetrack.*",
    "rapidfuzz",
    "rapidfuzz.*",
    "prefect",
    "prefect.*",
    "pyprojroot",
    "pyprojroot.*",
    "dvc",
    "dvc.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest + coverage
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/orbital",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "unit: fast unit tests",
    "integration: integration tests with fixtures",
    "contract: canonical dataset contract tests (skipped if fixture missing)",
    "slow: slow tests (excluded from default CI run)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:prefect.*",
]

[tool.coverage.run]
source = ["src/orbital"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
